# notes_lab

./: .gitignore  Pipfile  README.md  __main__.py  dodo.py  game_selection.py  main.py  menu.py  notes_by_ear.py  notes_on_stave.py  piano.py  pyproject.toml  screens.py  stats.py  test_app.py  tools.py
app/src/: notes_on_stave.py  piano.py  screens.py  stats.py  tools.py
app/src/loc/ru_RU.UTF-8/LC_MESSAGES/: loc.po
docs/: api.rst  conf.py  index.rst
src/: __main__.py  main.py  notes_by_ear.py  notes_on_stave.py  piano.py  screens.py  stats.py  tools.py
src/loc/ru_RU.UTF-8/LC_MESSAGES/: loc.mo  loc.po
