[project]
name = "notes_lab"
description = "Notes Lab"
version = "0.1"
requires-python = ">=3.10"
dependencies = ["pygame"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
notes_lab = "."

[tool.setuptools.package-data]
notes_lab = ["src/*/*/*/*.mo", "_build/**", "assets/**"]
